# masif2

./: .gitignore  .pre-commit-config.yaml  evals  pyproject.toml  tpu-requirements.txt
.github/workflows/: poetry-lock.yml
eval/: generate_mlp_curves.py  train_lcpfn.py
masif2/: __init__.py  model.py  pfn.py  prior.py  utils.py
masif2/evals/: generate_mlp_curves.py  synth_real.py  train_lcpfn.py
masif2/pfn/: __init__.py  decoders.py  encoders.py  model.py
tests/: conftest.py  test_multistage_training.py  test_pfn.py  test_prior.py
